RESOLVED FIXED213612
WTF::callOnMainThread should not require the main runloop to be initialized
https://bugs.webkit.org/show_bug.cgi?id=213612
Summary WTF::callOnMainThread should not require the main runloop to be initialized
Tadeu Zagallo
Reported 2020-06-25 11:31:43 PDT
...
Attachments
Patch (3.85 KB, patch)
2020-06-25 11:35 PDT, Tadeu Zagallo
ysuzuki: review+
Patch (4.17 KB, patch)
2020-06-25 11:51 PDT, Tadeu Zagallo
no flags
Patch for landing (4.28 KB, patch)
2020-06-25 12:01 PDT, Tadeu Zagallo
no flags
Tadeu Zagallo
Comment 1 2020-06-25 11:34:31 PDT
Tadeu Zagallo
Comment 2 2020-06-25 11:35:23 PDT
Yusuke Suzuki
Comment 3 2020-06-25 11:37:52 PDT
Comment on attachment 402751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402751&action=review r=me > Source/WTF/wtf/cocoa/MainThreadCocoa.mm:134 > + if (RunLoop::mainIfExists()) { > + RunLoop::main().dispatch(dispatchFunctionsFromMainThread); > + return; > + } Let's ensure that `s_mainRunLoop` is set after initializing RunLoop fully by inserting `WTF::storeStoreFence()` before `s_mainRunLoop = &RunLoop::current()`.
Tadeu Zagallo
Comment 4 2020-06-25 11:51:45 PDT
Tadeu Zagallo
Comment 5 2020-06-25 12:01:59 PDT
Created attachment 402770 [details] Patch for landing
EWS
Comment 6 2020-06-25 12:38:18 PDT
Committed r263524: <https://trac.webkit.org/changeset/263524> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402770 [details].
Note You need to log in before you can comment on or make changes to this bug.