Source/WTF/wtf/cocoa/MainThreadCocoa.mm
@@ -44,6 +44,19 @@
 #import <wtf/ios/WebCoreThread.h>
 #endif
 
+@interface JSWTFMainThreadCaller : NSObject
+- (void)call;
+@end
+
+@implementation JSWTFMainThreadCaller
+
+- (void)call
+{
+    WTF::dispatchFunctionsFromMainThread();
+}
+
+@end
+
 #define LOG_CHANNEL_PREFIX Log
 
 namespace WTF {
@@ -53,6 +66,8 @@ WTFLogChannel LogThreading = { WTFLogChannelState::On, "Threading", WTFLogLevel:
 #else
 WTFLogChannel LogThreading = { WTFLogChannelState::On, "Threading", WTFLogLevel::Error, LOG_CHANNEL_WEBKIT_SUBSYSTEM, OS_LOG_DEFAULT };
 #endif
+
+static JSWTFMainThreadCaller* staticMainThreadCaller;
 
 #if USE(WEB_THREAD)
 // When the Web thread is enabled, we consider it to be the main thread, not pthread main.
@@ -67,6 +82,9 @@ void initializeMainThreadPlatform()
     if (!pthread_main_np())
         RELEASE_LOG_FAULT(Threading, "WebKit Threading Violation - initial use of WebKit from a secondary thread.");
     ASSERT(pthread_main_np());
+
+    ASSERT(!staticMainThreadCaller);
+    staticMainThreadCaller = [[JSWTFMainThreadCaller alloc] init];
 }
 
 void scheduleDispatchFunctionsOnMainThread()
@@ -78,7 +96,12 @@ void scheduleDispatchFunctionsOnMainThread()
     }
 #endif
 
-    RunLoop::main().dispatch(dispatchFunctionsFromMainThread);
+    if (RunLoop::mainIfExists()) {
+        RunLoop::main().dispatch(dispatchFunctionsFromMainThread);
+        return;
+    }
+
+    [staticMainThreadCaller performSelectorOnMainThread:@selector(call) withObject:nil waitUntilDone:NO];
 }
 
 void dispatchAsyncOnMainThreadWithWebThreadLockIfNeeded(void (^block)())
